backend/build_error_backend.txt
   Compiling backend v0.1.0 (C:\Users\Zhitn\Desktop\Vvoice\backend)
warning: unused import: `Authenticate`
  --> src\main.rs:17:49
   |
17 | use codec::{MumbleCodec, MumblePacket, Version, Authenticate, ServerSync, ChannelState, UserState, UserRemove, UdpTunnel};
   |                                                 ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `unwrap_or_default` found for struct `std::string::String` in the current scope
   --> src\main.rs:221:68
    |
221 | ...                   let content = msg.message.clone().unwrap_or_default();
    |                                                         ^^^^^^^^^^^^^^^^^ method not found in `std::string::String`

error[E0308]: mismatched types
   --> src\main.rs:229:60
    |
229 | ...                   sys_msg.message = Some(format!("Echo mode: {}", if peer.echo_enabled { "ON" } else { "OFF" }));
    |                       ---------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `Option<String>`
    |                       |
    |                       expected due to the type of this binding
    |
    = note: expected struct `std::string::String`
                 found enum `Option<std::string::String>`

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `backend` (bin "backend") generated 1 warning
error: could not compile `backend` (bin "backend") due to 2 previous errors; 1 warning emitted
